--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lockfale/ARF.git"
+    "url": "git+https://github.com/fabiand93/LegalHackers.git "
   },
-  "author": "Justin Nordine (s0lray)",
+  "author": "Fabian Diaz",
   "license": "",
-  "bugs": {
-    "url": "https://github.com/lockfale/ARF/issues"
-  },
-  "homepage": "https://github.com/lockfale/ARF#readme",
+  "homepage": "https://github.com/fabiand93/LegalHackers/blob/master/README.md",
   "devDependencies": {
     "copyfiles": "^1.0.0",
     "d3": "^3.5.16"
